--- a/client/src/components/main/usersListPage/index.css
+++ b/client/src/components/main/usersListPage/index.css
@@ -6,3 +6,21 @@
   flex: 2;
   padding: 24px 0;
 }
+
+
+
+@keyframes softPopIn {
+  from {
+    opacity: 0;
+    transform: scale(0.95);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+.user-animate-item {
+  animation: softPopIn 0.15s ease-out forwards;
+  opacity: 0;
+}
